--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ p.text span {
             <!-- You can delete the links only if you purchased the pro version. -->
             <!-- Licensing information: https://bootstrapmade.com/license/ -->
             <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-            Designed by <a href="https://akshayghodki520.wixsite.com/akshayghodki">Akshay❤️Ghodki</a>
+            Designed by <a href=" https://akshayghodki.github.io/akshay-ghodki/">Akshay❤️Ghodki</a>
           </div>
         </div>
       </footer>
